# electricity_outage_bot

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  message_list.pickle  message_list_default.pickle  pyproject.toml  setup.cfg
.github/workflows/: build.yml  publish.yml
bot/: Dockerfile  bot.py  exceptions.py  models.py
tests/: conftest.py  test_bot.py
tests/responses/: emergency.html  outage.html  table.html
